App logic has been developed

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
         </header>
 
         <main>
+            <div class="dice">
+                <h2 id="diceNumber">1</h2>
+            </div>
+
             <div class="container">
-                <div class="playerOneCard">
+                <div class="playerOneCard role">
                     <span class="playerCardHeader">
                         <h3>PLAYER 1</h3>
                         <h2 id="playerOneScore">0</h2>
@@ -27,7 +31,7 @@
                     </span>
                 </div>
 
-                <div class="playerTwoCard">
+                <div class="playerTwoCard notRole">
                     <span class="playerCardHeader">
                         <h3>PLAYER 2</h3>
                         <h2 id="playerTwoScore">0</h2>
