Modals have been added

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                 <li id="rollDiceBtn">🎲 Roll Dice</li>
                 <li id="holdBtn">✋ Hold</li>
             </ul>
+
+            <div class="modals">
+                
+            </div>
         </main>
 
         <footer>
